--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ dotnet: 2.0.0
 mono: none
 script:
   - dotnet build
-  - dotnet test ./Sample.Tests/Sample.Tests.csproj /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
+  - dotnet test /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
   - curl -s https://codecov.io/bash > codecov
   - chmod +x codecov
   - ./codecov -f ./Sample.Tests/coverage.xml
